[gd_scene load_steps=25 format=3 uid="uid://dndhpntnnnosj"]

[ext_resource type="Script" path="res://Scripts/Player/PlayerActor.gd" id="1_iiw3q"]
[ext_resource type="Texture2D" uid="uid://cmop7521mralf" path="res://Assets/Sprites/Player/Player-Movement.png" id="2_3s3pf"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/StateMachine.gd" id="3_5c4cm"]
[ext_resource type="Texture2D" uid="uid://bgclkmim7xb81" path="res://Assets/Sprites/Player/knight.png" id="3_60ika"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/IdleState.gd" id="4_33fco"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/MoveState.gd" id="5_kbtyb"]
[ext_resource type="Script" path="res://Scripts/Player/Statemachine/States/AirState.gd" id="6_xte7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05aj4"]
size = Vector2(3.33333, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaaf6"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_63fwa"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_su5aj"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuedg"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_axdel"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyhje"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk373"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw45x"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn08t"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw5s6"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mnbv"]
atlas = ExtResource("3_60ika")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efyj"]
atlas = ExtResource("2_3s3pf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgb55"]
atlas = ExtResource("2_3s3pf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sms53"]
atlas = ExtResource("2_3s3pf")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_47v4w"]
atlas = ExtResource("2_3s3pf")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddnw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaaf6")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63fwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su5aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuedg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axdel")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyhje")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk373")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw45x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn08t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw5s6")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mnbv")
}],
"loop": true,
"name": &"Sneak",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgb55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sms53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47v4w")
}],
"loop": true,
"name": &"Sprint",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 2
script = ExtResource("1_iiw3q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -5.5)
shape = SubResource("RectangleShape2D_05aj4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_ddnw0")
animation = &"Idle"
autoplay = "Idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_5c4cm")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_33fco")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("5_kbtyb")

[node name="AirState" type="Node" parent="StateMachine"]
script = ExtResource("6_xte7u")
